mode saving in searchParams; receipt fix on small screens

--- a/src/components/modals/bill/bill.scss
+++ b/src/components/modals/bill/bill.scss
@@ -5,6 +5,6 @@
    }
 
    li {
-      margin-top: -0.25rem;
+      margin-top: -2px;
    }
 }
